<resources>

    <string name="app_name">Mochashi</string>
    <string name="mochashi_logo_desc">mochashi logo</string>
    <string name="register">Register</string>
    <string name="account_type">Account Type</string>
    <string name="grocery_haat_vendor">Grocery Haat Vendor</string>
    <string name="daily_haat_vendor">Daily Haat Vendor</string>
    <string name="chashi_one">Chashi Online</string>
    <string name="customer">Customer</string>
    <string name="nick_name">Nick Name</string>
    <string name="select_salutation">Select Salutation</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="shop_name">Shop Name</string>
    <string name="fetch_location">Fetch Location</string>
    <string name="please_capture_image_of_your_shop">please capture image of your shop</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="register_user">Register User</string>
    <string name="existing_user">Existing User?</string>
    <string name="sir">Sir</string>
    <string name="madam">Madam</string>
    <string name="babu">Babu</string>
    <string name="dada">Dada</string>
    <string name="didi">Didi</string>
    <string name="bhai">Bhai</string>
    <string name="mausa">Mausa</string>
    <string name="mausi">Mausi</string>
    <string name="other">Other</string>
    <string name="login">Login</string>
    <string name="ob_header1">Only Fresh Products</string>
    <string name="ob_header2">Simple Booking Process</string>
    <string name="ob_header3">Nominal Delivery Charges</string>
    <string name="ob_desc3">For home delivery service by MoChasi, nominal fees are charged to customers</string>
    <string name="ob_desc2">Search the farmers’ locations on the Map and reach there for self pick up</string>
    <string name="ob_desc1">Get fresh vegetables from the Farmers and Pay them directly</string>
    <string name="login_user">Login User</string>
    <string name="chashi_online">Chashi Online</string>
    <string name="search_vegetable_or_fruits">Search Vegetable or Fruits</string>
    <string name="tomato">Tomato</string>
    <string name="cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Enter Quantity</string>
    <string name="place_order">Place Order</string>
    <string name="send_otp">Send OTP</string>
    <string name="send_otp_mobile">SEND OTP</string>
    <string name="otp">OTP</string>
    <string name="verify_amp_login"><![CDATA[VERIFY & LOGIN]]></string>
    <string name="atc">ADD TO CART</string>
    <string name="uc">UPDATE CART</string>
    <string name="mob_empty">Mobile number must not be empty.</string>
    <string name="mob_digit">Mobile number must be only digits.</string>
    <string name="mob_10_digit">Mobile number must be of 10 digits.</string>
    <string name="mob_num">mobile_number</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="key_google_apis_android">AIzaSyAsSY0Kk-PHj8BYktZY74V2MlyEyTVmc_Y</string>
    <string name="api_url"><![CDATA[https://maps.googleapis.com/maps/api/distancematrix/json?units=metric&origins=]]></string>
    <string name="key_of_api"><![CDATA[&key=AIzaSyAsSY0Kk-PHj8BYktZY74V2MlyEyTVmc_Y]]></string>
</resources>
