<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".genericmodule.view.activity.authmodule.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:theme="@style/ToolbarColoredBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarRegister"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/account_type">

                <AutoCompleteTextView
                    android:id="@+id/txtACAccountType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:hint="@string/nick_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtNickName"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:hint="@string/select_salutation">

                    <AutoCompleteTextView
                        android:id="@+id/txtCASalute"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                android:hint="@string/mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txMobileNumber"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                android:hint="@string/shop_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtShopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/mochashi_logo_desc"
                app:srcCompat="@drawable/ic_photo_camera_d7d7d7_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/please_capture_image_of_your_shop"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                android:hint="@string/fetch_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFetchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:endIconMode="password_toggle"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:endIconMode="password_toggle"
                android:hint="@string/re_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtRePassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbtnRegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/register_user"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>